gforge (3rc1-0+) experimental; urgency=low

  * [Christian] Added support for content encoding in util_send_mail
  * [Christian] Removed .htaccess and put appropriate lines in httpd template 

 -- Christian Bayle <bayle@debian.org>  Thu,  6 Mar 2003 16:36:14 +0100

gforge (3pre9-0+2) experimental; urgency=low

  * [Roland] Recoded Debconf templates into UTF-8, as part of the grand
    transition to UTF-8.
  * [Roland] Also set the PHP default charset to be UTF-8 in the Apache
    configuration.
  * [Christian] Improved transition from debian-sf 2.5
  * [Christian] pre9 package db upgrade
  * [Christian] Removed stricter dependency on debconf, to be able to run
    on woody
  * [Christian] removed dns.head for simple config and added test in dns
    cron
  * [Christian] applied Jim Nutt (jimnutt) patch [ #183 ] Fixes an ip
    address in dns config
  * [Roland] Adapted to run with Mailman 2.1.
  * [Christian] Adjusted sequence in language table
  * [Christian] Adjusted stateid in doc_data
  * [Christian] Repeared local customization 

 -- Christian Bayle <bayle@debian.org>  Mon,  3 Mar 2003 22:55:59 +0100

gforge (3pre8-0+1) experimental; urgency=low

  * [Roland] Reencoded this changelog into UTF-8, as per upcoming policy
    changes (see bug #174982).
  * [Roland] Also, changed version to reflect the pre8 status of the
    current code.
  * [Roland] Stricter dependency on debconf, to fix a Lintian warning.
  * [Roland] Die on error when installing the DB.
  * [Roland] Do not forget 20021213.sql...
  * [Roland] Generate a random password for the LDAP stuff if the user
    doesn't provide one.
  * [Christian] Applied Olafur Osvaldsson patch #143, Incorrect user
    permissions on upload dir 
  * [Roland] Several changes occured in PostgreSQL between versions 7.2
    and 7.3: the pg_hba.conf file syntax, the way users are authenticated,
    and data checking is stricter.  The installation process should now